Modify service